---------------------------------------------------------------------------------------------------
Version: 0.2.23
Date: 2020-12-05
  Bugfixes:
    - fixing Crash during save (2nd trial). Probably migration will help.
    - fixing can't click quickly twice
---------------------------------------------------------------------------------------------------
Version: 0.2.22
Date: 2020-12-05
  Bugfixes:
    - fixing Selector-Panel needs scroll ability
    - fixing Crash during save
---------------------------------------------------------------------------------------------------
Version: 0.2.21
Date: 2020-12-05
  Bugfixes:
    - fixing crash after game.player.force.research_all_technologies()
  Changes:
    - zn-CH localisation by Ting_amm
---------------------------------------------------------------------------------------------------
Version: 0.2.20
Date: 2020-12-04
  Bugfixes:
    - fixing crash when initializing items whithout recipe
  Changes:
    - fuel category display
    - more situations for getting help
    - smarter display of machine list
    - smarter treating of selector panel
    - provide fluids in selector
---------------------------------------------------------------------------------------------------
Version: 0.2.19
Date: 2020-12-03
  Bugfixes:
    - fixing crash when initializing items whithout recipe
  Changes:
    - Rolled back to old selector since the new one causes performance problems with huge mods (huge mods are the target of this mod!)
---------------------------------------------------------------------------------------------------
Version: 0.2.18
Date: 2020-12-03
  Changes:
    - just bit more logging
---------------------------------------------------------------------------------------------------
Version: 0.2.17
Date: 2020-12-03
  Bugfixes:
    - fixing crash in on_string_translated (hotfix by out-commenting that handler)
---------------------------------------------------------------------------------------------------