@@ -2,36 +2,45 @@ local Constants = require("Constants")
 local class = require("core.class")
 
 local History = class:new("History")
+History:properties{
+    IsForePossible = {
+        get = function(self)
+            return self.Index < #self.Data --
+        end,
+    },
+    IsBackPossible = {
+        get = function(self)
+            return self.Index > 1 --
+        end,
+    },
+    Current = {get = function(self)
+        return self.Index > 0 and self.Data[self.Index] or nil
+    end},
+}
 
 function History:new(target)
-    local instance = self:adopt{
-        Data = target and target.Data or {},
-        Index = target and target.index or 0,
-    }
-    self = instance
-    instance:properties{
-        IsForePossible = {
-            get = function(self)
-                return self.Index < #self.Data --
-            end,
-        },
-        IsBackPossible = {
-            get = function(self)
-                return self.Index > 1 --
-            end,
-        },
-        Current = {get = function(self)
-            return self.Index > 0 and self.Data[self.Index] or nil
-        end},
-    }
-    self:Log("History:new")
-    return self
+    local instance = self:adopt{Data = {}, Index = 0}
+    if target then
+        instance.Data = target.Data
+        if type(target.Index) == "number" then
+            if target.Index > #instance.Data then
+                instance.Index = #instance.Data
+            elseif target.Index < #instance.Data then
+                instance.Index = 1
+            else
+                instance.Index = target.Index
+            end
+        end
+    end
+
+    instance:Log("History:new")
+    return instance
 end
 
 function History:Log(tag)
     log(">>>---" .. tag)
     for index = 1, #self.Data do
-        log((index == self.Index and "*" or " ") .. index .. " " .. self.Data[index].SpriteName)
+        log((index == self.Index and "*" or " ") .. index .. " " .. self.Data[index])
     end
     log("<<<---" .. tag)
 end
@@ -61,6 +70,6 @@ function History:Fore() --
     self:Log("History:Fore")
 end
 
-function History:Save() return {Data = self.Data, Index = self.Index} end
+function History:Save() return {} end
 
 return History
