@@ -1,1 +1,3 @@
-global.Current.Player = nil
+local History = require("ingteb.History")
+global = {Links = {}, Location = {}, History = History:new()}
+game.print("[ingteb] migration 0.2.23")
